Ajout bootstrap, errors style, forms

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   </head>
   <!-- 4. Display the application -->
   <body>
+    <div class="container">
     <app>Loading...</app>
+    </div>
   </body>
 </html>
