--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <title>Angular 2 QuickStart</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- 1. Load libraries -->
     <script src="https://rawgithub.com/systemjs/systemjs/0.19.6/dist/system.js"></script>
     <script src="https://code.angularjs.org/tools/typescript.js"></script>
