--- a/src/personalDataForm.html
+++ b/src/personalDataForm.html
@@ -1,13 +1,13 @@
 <h1>Données personnelles</h1>
+<div *ngIf="birthDateControl.touched && !birthDateControl.valid" class="alert alert-danger">
+    <p *ngIf="birthDateControl.errors.required">Date de naissance requise</p>
+    <p *ngIf="birthDateControl.errors.isNotDate">La date de naissance n'est pas au bon format (JJ.MM.AAAA)</p>
+</div>
 <form [ngFormModel]="formGroup" class="form-horizontal">
   <div class="form-group">
     <label for="birthDateControl" class="col-sm-2 control-label">Date de naissance</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" [class.error]="!birthDateControl.valid && birthDateControl.dirty" [(ngModel)]="birthDate" ngControl="birthDateControl" id="birthDateControl" required placeholder="JJ.MM.AAAA">
-      <div *ngIf="birthDateControl.touched && !birthDateControl.valid" class="alert alert-danger">
-          <p *ngIf="birthDateControl.errors.required">Date de naissance requise</p>
-          <p *ngIf="birthDateControl.errors.isNotDate">La date de naissance n'est pas au bon format (JJ.MM.AAAA)</p>
-      </div>
     </div>
   </div>
   <div class="form-group">
@@ -54,5 +54,5 @@
     </div>
   </div>
   <hr>
-  <h1 [hidden]="!birthDate">Hello {{birthDate}} !</h1>
+  <h1 [hidden]="!birthDate && false">Vous êtes né le {{birthDate}}!</h1>
 </form>
