--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script>document.write('<base href="' + document.location + '" />');</script>
     
     <title>Angular 2 QuickStart</title>
+    <!-- 1. Load libraries and styles -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- 1. Load libraries -->
     <script src="https://rawgithub.com/systemjs/systemjs/0.19.6/dist/system.js"></script>
     <script src="https://code.angularjs.org/tools/typescript.js"></script>
     <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
